finished single post jsx - starting on sidebar categories

--- a/client/src/components/post/post.css
+++ b/client/src/components/post/post.css
@@ -10,7 +10,7 @@
 	border-radius: 7px;
 }
 
-.postinfo {
+.postInfo {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -35,7 +35,7 @@
 }
 
 .postDate {
-	font-family: ;
+	font-family: 'Roboto', sans-serif;
 	font-style: italic;
 	font-size: 13px;
 	color: #999;
@@ -51,6 +51,6 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	display: -webkit-box;
-	-webkit-line-clamp: 3;
+	-webkit-line-clamp: 4;
 	-webkit-box-orient: vertical;
 }
