--- a/client/src/components/sidebar/sidebar.css
+++ b/client/src/components/sidebar/sidebar.css
@@ -22,6 +22,7 @@
 	border-top: 1px solid #a7a4a4;
 	border-bottom: 1px solid #a7a4a4;
 	font-family: 'Roboto', sans-serif;
+	font-size: 12px;
 	color: #222;
 	font-weight: 600;
 	line-height: 20px;
