--- a/client/src/components/singlePost/singlePost.css
+++ b/client/src/components/singlePost/singlePost.css
@@ -5,6 +5,8 @@
 .singlePostWrapper {
 	padding: 20px;
 	padding-right: 0;
+	display: flex;
+	flex-direction: column;
 }
 
 .singlePostImg {
@@ -16,7 +18,7 @@
 
 .singlePostTitle {
 	text-align: center;
-	margin: 10px 0;
+	margin: 10px;
 	font-family: 'Roboto', sans-serif;
 	font-size: 28px;
 }
