--- a/client/src/pages/login/login.css
+++ b/client/src/pages/login/login.css
@@ -42,6 +42,11 @@
 	padding: 10px;
 }
 
+.loginButton:disabled {
+	cursor: not-allowed;
+	background-color: lightcoral;
+}
+
 .loginRegisterButton {
 	position: absolute;
 	top: 60px;
