--- a/client/src/components/singlePost/singlePost.css
+++ b/client/src/components/singlePost/singlePost.css
@@ -19,8 +19,22 @@
 .singlePostTitle {
 	text-align: center;
 	margin: 10px;
-	font-family: 'Roboto', sans-serif;
+	font-family: 'Lora', serif;
 	font-size: 28px;
+}
+
+.singlePostTitleInput {
+	margin: 10px;
+	font-family: 'Lora', serif;
+	font-size: 28px;
+	text-align: center;
+	border: none;
+	color: gray;
+	border-bottom: 1px solid lightgray;
+}
+
+.singlePostTitleInput:focus {
+	outline: none;
 }
 
 .singlePostEdit {
@@ -38,7 +52,7 @@
 }
 
 .singlePostIcon:last-child {
-	color: red;
+	color: tomato;
 }
 
 .singlePostInfo {
@@ -46,8 +60,8 @@
 	display: flex;
 	justify-content: space-between;
 	font-size: 16px;
-	color: black;
 	font-family: 'Roboto', sans-serif;
+	color: #b39656;
 }
 
 .singlePostDesc {
@@ -60,4 +74,26 @@
 	margin-left: 20px;
 	font-size: 30px;
 	font-weight: 600;
+}
+
+.singlePostDescInput {
+	border: none;
+	color: #666;
+	font-size: 18px;
+	line-height: 25px;
+}
+
+.singlePostDescInput:focus {
+	outline: none;
+}
+.singlePostButton {
+	width: 100px;
+	border: none;
+	background-color: teal;
+	padding: 5px;
+	color: white;
+	border-radius: 5px;
+	cursor: pointer;
+	align-self: flex-end;
+	margin-top: 20px;
 }
