--- a/client/src/pages/settings/settings.css
+++ b/client/src/pages/settings/settings.css
@@ -16,12 +16,12 @@
 .settingsUpdateTitle {
 	font-size: 30px;
 	margin-bottom: 20px;
-	color: lightblue;
+	color: lightcoral;
 }
 
 .settingsDeleteTitle {
-	font-size: 12px;
 	color: red;
+	font-size: 12px;
 	cursor: pointer;
 }
 
@@ -33,8 +33,7 @@
 .settingsPP {
 	display: flex;
 	align-items: center;
-	margin-top: 10px;
-	margin-bottom: 10px;
+	margin: 10px 0;
 }
 
 .settingsPP > img {
@@ -44,26 +43,17 @@
 	object-fit: cover;
 }
 
-.settingsPPInput {
-	width: 30%;
-}
-
 .settingsPPIcon {
 	width: 25px;
 	height: 25px;
-	padding: 5px;
 	border-radius: 50%;
-	background-color: lightblue;
+	background-color: lightcoral;
 	color: white;
 	display: flex;
 	align-items: center;
 	justify-content: center;
 	margin-left: 10px;
 	cursor: pointer;
-}
-
-.settingsPPButton:focus {
-	outline-style: none;
 }
 
 .settingsForm > label {
@@ -73,23 +63,20 @@
 
 .settingsForm > input {
 	color: gray;
-	margin: 10px;
+	margin: 10px 0;
 	height: 30px;
 	border: none;
-	border-bottom: 1px solid lightgrey;
+	border-bottom: 1px solid lightgray;
 }
 
-.settingsSubmitButton {
+.settingsSubmit {
 	width: 150px;
 	align-self: center;
 	border: none;
 	border-radius: 10px;
 	color: white;
+	background-color: teal;
 	padding: 10px;
 	margin-top: 20px;
 	cursor: pointer;
-}
-
-.settingsSubmitButton:hover {
-	background-color: blue;
 }
